# docs/swagger.yaml
@@ -96,7 +96,7 @@ definitions:
       otp:
         type: integer
     type: object
-host: jaseela.tech
+host: localhost:9090
 info:
   contact:
     email: support@swagger.io
@@ -104,7 +104,6 @@ info:
     url: http://www.swagger.io/support
   description: <add description here>
   license:
-    name: MIT
     url: https://opensource.org/licenses/MIT
   title: ORCHID_FOOTWARES
   version: "1.0"
@@ -121,9 +120,9 @@ paths:
         name: code
         required: true
         type: string
-      - description: minamount
+      - description: minimumamount
         in: query
-        name: minamount
+        name: minimumamount
         required: true
         type: string
       - description: amount
